# invoice-collector

./: .gitignore  README.md  README_EN.md  config.yaml.example  pyproject.toml
src/invoice_collector/: __init__.py  attachment_handler.py  classifier.py  config.py  email_client.py  file_manager.py  main.py  ofd_parser.py  pdf_parser.py  pipeline.py  state_manager.py  web_handler.py
